# fx-deal-manager

./: .dockerignore  .env.example  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  nginx.dev.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_executed_deal_state.py  003_add_cancelled_deal_state.py  004_user_preferences_notifications.py  005_deal_limits_regulatory.py
docs/: PMI-недостающий-функционал.md  fx-asubank-c4-updated.drawio  ПЗ к ТП.tex  ПМИ.md  Руководство-администратора.md  Руководство-пользователя.md
scripts/: demo.sh  seed-demo-users.sh
src/fx_deal_manager/: __init__.py  main.py
src/fx_deal_manager/api/: auth.py  dependencies.py  exceptions.py  middleware.py
src/fx_deal_manager/api/routes/: __init__.py  audit.py  deals.py  health.py  me.py  notifications.py  nsi.py  positions.py  quotes.py  reports.py
src/fx_deal_manager/core/: __init__.py  config.py  database.py  fault_injection.py  logging.py  migrations.py
src/fx_deal_manager/domain/: enums.py  models.py  schemas.py
src/fx_deal_manager/integrations/: nsi_client.py  position_client.py  position_stub.py
src/fx_deal_manager/repositories/: audit_repository.py  deal_repository.py  limit_repository.py  nsi_repository.py
src/fx_deal_manager/services/: approval_service.py  audit_log_service.py  deal_service.py  limit_check.py  nostro_assignment.py  nsi_service.py  payment_calculator.py  regulatory_report.py  settlement.py  validation.py
tests/: conftest.py  test_auth.py  test_deals.py  test_deals_integration.py  test_health.py  test_logging.py  test_pmi_appendix_g.py  test_stage4_integration.py  test_stage6_cancel_reports.py  test_validate_integration.py  test_validation_services.py
